--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "js-file-download": "^0.4.12",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
