--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "save-walter-x",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@opentelemetry/api": "^1.7.0",
+    "axios": "^1.6.7",
+    "js-file-download": "^0.4.12",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
-    "@types/react": "^17.0.3",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.9",
-    "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
